# cyclotron

./: .gitignore  Cargo.toml  README  TODO.md
backend/: Cargo.toml
backend/src/: async.rs  event.rs  json.rs  lib.rs  state.rs  sync.rs  tests.rs
examples/: stream.py
frontend/: README  build.sh  bundle.js  package-lock.json  package.json  tsconfig.json
frontend/src/: index.html  index.js  index.ts  lane.js  lane.ts  main.js  main.js.map  main.ts  model.js  model.ts  scratch.js  scratch.ts  span.ts  websockets.html
glviewer/: Cargo.toml
glviewer/src/: db.rs  layout.rs  layout_algorithm.rs  main.rs  render.rs  text.rs  util.rs  view.rs
old-frontend/: .gitignore  package-lock.json  package.json
old-frontend/src/: index.html  main.ts  model.ts  pixi.html  webgl.ts
server/: Cargo.toml
server/src/: event.rs  main.rs
src/: async.rs  lib.rs  tests.rs
