[package]
name = "glviewer"
version = "0.1.0"
authors = ["Joshua Warner <joshw@dropbox.com>"]
edition = "2018"

[dependencies]
cyclotron-backend = { path = "../backend"}
structopt = "0.3.12"
glium = "0.27.0"
image = "0.23.2"
serde_json = "1.0.50"
bit-set = "0.5.1"
rand = "0.7.3"

[dependencies.rusttype]
version = "0.9.1"
features = ["gpu_cache"]