[package]
name = "glviewer"
version = "0.1.0"
authors = ["Joshua Warner <joshw@dropbox.com>"]
edition = "2018"

[profile.release]
debug = 2

[dependencies]
cyclotron-backend = { path = "../backend"}
structopt = "0.3.26"
glium = "0.31.0"
image = "0.24.2"
serde_json = "1.0.81"
bit-set = "0.5.2"
rand = "0.8.5"
regex = "1.5.5"
flate2 = "1.0.23"

[dependencies.rusttype]
version = "0.9.2"
features = ["gpu_cache"]
